# cstring_view

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  gcovr.cfg  vcpkg.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-update.yml  vcpkg-release.yml
docs/: using_cstring_view.md
examples/: CMakeLists.txt  example.cpp
include/beman/cstring_view/: cstring_view.hpp
papers/: P3655R2.md
port/: portfile.cmake.in  vcpkg.json.in
src/beman/cstring_view/: CMakeLists.txt  beman.cstring_view-config.cmake.in  cstring_view.cpp
tests/beman/cstring_view/: CMakeLists.txt  cstring_view.test.cpp
